--- a/css/styles.css
+++ b/css/styles.css
@@ -465,8 +465,9 @@ position: relative;
 filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
 border-radius: 4px;
 color: #fff;
+padding-left: 19px;
 }
-.input-footer::placeholder{ padding-left: 16px;}
+/* .input-footer::placeholder{ padding-left: 16px;} */
 .subscribe-icon{
     position: absolute;
     right: 24px;
@@ -744,6 +745,7 @@ margin-top: 4px;
 background-color: inherit;
 position: relative;
 outline: transparent;
+padding-left: 38px;
 }
 .input-modal:focus{
     border-color: #4D5AE5;
